tests/bad/slicing_array.glaz
fn main() {
	_ = vec[i32]{ 1, 2, 3, 4 }[:];
}
